--- a/lan2/Views/Users/Index.cshtml
+++ b/lan2/Views/Users/Index.cshtml
@@ -21,7 +21,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Email)
             </th>
-            
+            <th>
+                @Html.DisplayNameFor(model => model.Password)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.UserName)
             </th>
@@ -46,7 +48,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
-            
+            <td>
+                @Html.DisplayFor(modelItem => item.Password)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.UserName)
             </td>
